--- a/index.html
+++ b/index.html
@@ -73,14 +73,18 @@
     <!-- Main -->
     <main class="main">
       <div class="main_container">
-        <a class="link" href="./get_out.html">Przykładowa podstrona</a>
-        <a class="link" href="tel:+48574457537">+48 574 457 537</a>
-        <a class="link" href="mailto:bogdan.paslawskii@gmail.com">
-          bogdan.paslawskii@gmail.com
-        </a>
-        <button id="btnOpen" type="button" class="button">
-          Formularz kontaktowy
-        </button>
+        <div class="left_container">
+          <a class="link" href="./get_out.html">Przykładowa podstrona</a>
+          <a class="link" href="tel:+48574457537">+48 574 457 537</a>
+        </div>
+        <div class="right_container">
+          <a class="link" href="mailto:bogdan.paslawskii@gmail.com">
+            bogdan.paslawskii@gmail.com
+          </a>
+          <button id="btnOpen" type="button" class="button">
+            Formularz kontaktowy
+          </button>
+        </div>
       </div>
     </main>
 
