--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <!-- Footer -->
     <footer class="footer">
       <h2 class="footer_headline">
-        <span class="footer_label">by</span> Bogdano
+        <span class="footer_label">by</span> Bogdano and Denis
       </h2>
     </footer>
 
