--- a/get_out.html
+++ b/get_out.html
@@ -46,21 +46,14 @@
     <main>
       <div class="get_out_iframe">
         <iframe
-          src="https://giphy.com/embed/ac7MA7r5IMYda"
-          width="700"
-          height="700"
+          src="https://giphy.com/embed/MRDICUC5enJy8"
+          width="480"
+          height="277"
           frameborder="0"
           class="giphy-embed"
           allowfullscreen
         ></iframe>
       </div>
     </main>
-
-    <!-- Footer -->
-    <footer class="footer">
-      <h2 class="footer_headline">
-        <span class="footer_label">by</span> Bogdano and Denis
-      </h2>
-    </footer>
   </body>
 </html>
