--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
       <div class="main_container">
         <div class="left_container">
           <a class="link" href="./get_out.html">Przykładowa podstrona</a>
-          <a class="link" href="tel:+48574457537">+48 574 457 537</a>
+          <a class="link" href="tel:+48123456789">+48 123 456 789</a>
         </div>
         <div class="right_container">
-          <a class="link" href="mailto:bogdan.paslawskii@gmail.com">
-            bogdan.paslawskii@gmail.com
+          <a class="link" href="mailto:training@como.com">
+            training@como.com
           </a>
           <button id="btnOpen" type="button" class="button">
             Formularz kontaktowy
@@ -87,13 +87,6 @@
         </div>
       </div>
     </main>
-
-    <!-- Footer -->
-    <footer class="footer">
-      <h2 class="footer_headline">
-        <span class="footer_label">by</span> Bogdano and Denis
-      </h2>
-    </footer>
 
     <!-- Modal -->
     <div id="modal" class="modal">
@@ -135,10 +128,6 @@
             name="tel"
             placeholder="Phone"
           />
-          <label>
-            <input type="checkbox" name="agreement" />
-            Zgoda na wysyłanie przez Bogdana spamu
-          </label>
         </div>
 
         <!-- Buttons -->
