--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
           <a class="link" href="tel:+48123456789">+48 123 456 789</a>
         </div>
         <div class="right_container">
-          <a class="link" href="mailto:training@como.com">
-            training@como.com
+          <a class="link" href="mailto:training@gmail.com">
+            training@gmail.com
           </a>
           <button id="btnOpen" type="button" class="button">
             Formularz kontaktowy
