--- a/index.html
+++ b/index.html
@@ -10,6 +10,21 @@
       type="image/x-icon"
       href="./svg/google-tag-manager-svg.svg"
     />
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=AW-11246885656"
+    ></script>
+
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "AW-11246885656");
+    </script>
   </head>
 
   <!-- BODY -->
