--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <main class="main">
       <div class="main_container">
         <div class="left_container">
-          <a class="link" href="./get_out.html">Przykładowa podstrona</a>
+          <a class="link" href="./podstrona_google.html">Przykładowa podstrona</a>
           <a class="link" href="tel:+48123456789">+48 123 456 789</a>
         </div>
         <div class="right_container">
